--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "@material-ui/icons": "^4.5.1",
+    "css-loader": "^3.2.0",
+    "mdbreact": "^4.23.0",
+    "mini-css-extract-plugin": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
