--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://salma-nyagaka.github.io/centum-landingpage/",
   "name": "website",
   "version": "0.1.0",
   "private": true,
