updated file for gh-pages hosting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://salma-nyagaka.github.io/centum-landingpage/",
+  "homepage": "https://salma-nyagaka.github.io/centum-landingpage",
   "name": "website",
   "version": "0.1.0",
   "private": true,
