--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@material-ui/icons": "^4.5.1",
     "css-loader": "^3.2.0",
     "mdbreact": "^4.23.0",
-    "mini-css-extract-plugin": "^0.4.0"
+    "mini-css-extract-plugin": "^0.4.0",
+    "react-countup": "^4.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-countup": "^4.3.3"
   }
 }
